# dayly

./: .gitignore  AGENTS.md  README.md  index.html  package.json  pnpm-lock.yaml
src/: App.tsx  i18n.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/data/holidays/CN/: 2026.min.json
src/lib/: calendar.ts
